--- a/8088/serial/run/run.vcxproj.filters
+++ b/8088/serial/run/run.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="..\..\..\include\alfe\thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
