--- a/image_resample/cga.config
+++ b/image_resample/cga.config
@@ -1,5 +1,5 @@
 inputPicture = "../../cga_schematic_large.png";
 outputSize = Vector(300, 155);
-subpixels = true;
-tripleResolution = false;
-outputPicture = "../../cga_schematic_subpixels.png";
+subpixels = false;
+tripleResolution = true;
+outputPicture = "../../cga_schematic_small.png";
