--- a/image_resample/lenna.config
+++ b/image_resample/lenna.config
@@ -1,6 +1,6 @@
 inputPicture = "../../lenna.png";
 outputSize = Vector(128, 128);
-subpixels = true;
+subpixels = false;
 tripleResolution = false;
-outputPicture = "../../lenna_subpixels.png";
+outputPicture = "../../lenna_small.png";
 
