--- a/alfe/alfe.vcxproj.filters
+++ b/alfe/alfe.vcxproj.filters
@@ -39,10 +39,13 @@
     <ClCompile Include="compiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="identifier.cpp">
+    <ClCompile Include="parse_tree_object.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="parse_tree_object.cpp">
+    <ClCompile Include="operator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scope.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
