--- a/8088/cga/calibrate/calibrate.vcxproj.filters
+++ b/8088/cga/calibrate/calibrate.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="..\..\..\include\alfe\colour_space.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\vectors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\terminal6.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
