--- a/8088/cga/capture/capture_field/capture_field.vcxproj
+++ b/8088/cga/capture/capture_field/capture_field.vcxproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <ClCompile Include="capture_field.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\include\alfe\complex.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
