--- a/8088/cga/calibrate/calibrate2/calibrate2.vcxproj
+++ b/8088/cga/calibrate/calibrate2/calibrate2.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{2148EFFA-4014-454C-B7EB-BEF663B42D38}</ProjectGuid>
+    <ProjectGuid>{B80D0F7C-183E-4C9E-862A-448DD6147D46}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>calibrate</RootNamespace>
+    <RootNamespace>calibrate2</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -63,13 +63,10 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>Full</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,19 +76,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="calibrate.cpp" />
+    <ClCompile Include="calibrate2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\include\alfe\bitmap.h" />
-    <ClInclude Include="..\..\..\include\alfe\colour_space.h" />
-    <ClInclude Include="..\..\..\include\alfe\terminal6.h" />
-    <ClInclude Include="..\..\..\include\alfe\user.h" />
-    <ClInclude Include="..\..\..\include\alfe\vectors.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Projects\Code\libpng\projects\vstudio\libpng\libpng.vcxproj">
-      <Project>{d6973076-9317-4ef2-a0b8-b7a18ac0713e}</Project>
-    </ProjectReference>
+    <ClInclude Include="..\..\..\..\include\alfe\colour_space.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
