--- a/8088/8088.vcxproj
+++ b/8088/8088.vcxproj
@@ -41,7 +41,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\t\reenigne\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -79,20 +79,65 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="8088.cpp" />
+    <ClInclude Include="8253.h">
+      <FileType>CppHeader</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\alfe\allocator.h" />
+    <ClInclude Include="..\include\alfe\any.h" />
     <ClInclude Include="..\include\alfe\array.h" />
+    <ClInclude Include="..\include\alfe\assert.h" />
+    <ClInclude Include="..\include\alfe\audio.h" />
+    <ClInclude Include="..\include\alfe\bitmap.h" />
+    <ClInclude Include="..\include\alfe\bitmap_png.h" />
     <ClInclude Include="..\include\alfe\buffer.h" />
     <ClInclude Include="..\include\alfe\character_source.h" />
+    <ClInclude Include="..\include\alfe\circular_buffer.h" />
+    <ClInclude Include="..\include\alfe\colour_space.h" />
+    <ClInclude Include="..\include\alfe\com.h" />
+    <ClInclude Include="..\include\alfe\complex.h" />
     <ClInclude Include="..\include\alfe\config_file.h" />
+    <ClInclude Include="..\include\alfe\convolution_pipe.h" />
+    <ClInclude Include="..\include\alfe\directx.h" />
+    <ClInclude Include="..\include\alfe\email.h" />
+    <ClInclude Include="..\include\alfe\evaluate.h" />
+    <ClInclude Include="..\include\alfe\exception.h" />
+    <ClInclude Include="..\include\alfe\fcolour.h" />
+    <ClInclude Include="..\include\alfe\file.h" />
+    <ClInclude Include="..\include\alfe\file_handle.h" />
+    <ClInclude Include="..\include\alfe\find_handle.h" />
+    <ClInclude Include="..\include\alfe\fix.h" />
+    <ClInclude Include="..\include\alfe\fractal.h" />
+    <ClInclude Include="..\include\alfe\gcd.h" />
+    <ClInclude Include="..\include\alfe\handle.h" />
     <ClInclude Include="..\include\alfe\hash_table.h" />
     <ClInclude Include="..\include\alfe\integer_types.h" />
+    <ClInclude Include="..\include\alfe\linked_list.h" />
     <ClInclude Include="..\include\alfe\main.h" />
+    <ClInclude Include="..\include\alfe\minimum_maximum.h" />
+    <ClInclude Include="..\include\alfe\owning_array.h" />
+    <ClInclude Include="..\include\alfe\pipes.h" />
+    <ClInclude Include="..\include\alfe\pool.h" />
+    <ClInclude Include="..\include\alfe\random.h" />
+    <ClInclude Include="..\include\alfe\rational.h" />
+    <ClInclude Include="..\include\alfe\reference.h" />
     <ClInclude Include="..\include\alfe\reference_counted.h" />
+    <ClInclude Include="..\include\alfe\reference_counted_array.h" />
+    <ClInclude Include="..\include\alfe\rotors.h" />
+    <ClInclude Include="..\include\alfe\set.h" />
     <ClInclude Include="..\include\alfe\space.h" />
+    <ClInclude Include="..\include\alfe\stack.h" />
     <ClInclude Include="..\include\alfe\string.h" />
-    <ClInclude Include="..\include\alfe\type.h" />
+    <ClInclude Include="..\include\alfe\swap.h" />
+    <ClInclude Include="..\include\alfe\symbol.h" />
+    <ClInclude Include="..\include\alfe\terminal6.h" />
+    <ClInclude Include="..\include\alfe\thread.h" />
+    <ClInclude Include="..\include\alfe\uncopyable.h" />
+    <ClInclude Include="..\include\alfe\user.h" />
     <ClInclude Include="..\include\alfe\value.h" />
+    <ClInclude Include="..\include\alfe\vectors.h" />
+    <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
