--- a/8088/8088.vcxproj.filters
+++ b/8088/8088.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClInclude Include="8253.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="8237.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
