--- a/8088/Makefile
+++ b/8088/Makefile
@@ -1,10 +1,11 @@
-CC=cc
+CC=g++
 CFLAGS=-O2 -I../include -std=c++11
 
+debug: CFLAGS += -O0 -g
+debug: 8088
+
 all: 8088
-8088: 8088.o
-	$(CC) -o 8088 8088.o
-8088.o: 8088.cpp
-	$(CC) $(CFLAGS) -c 8088.cpp
+8088: 8088.cpp
+	$(CC) $(CFLAGS) 8088.cpp -o $@
 clean:
 	rm -f 8088 8088.o
