--- a/8088/ibm5150.config
+++ b/8088/ibm5150.config
@@ -1,10 +1,10 @@
 roms = {
   // Mask   Address  Filename                                             File offset
-  {0xfe000, 0xf6000, "/t/projects/emulation/pc/roms/ibm5150/5700019.u29", 0x0000},
-  {0xfe000, 0xf8000, "/t/projects/emulation/pc/roms/ibm5150/5700027.u30", 0x0000},
-  {0xfe000, 0xfa000, "/t/projects/emulation/pc/roms/ibm5150/5700035.u31", 0x0000},
-  {0xfe000, 0xfc000, "/t/projects/emulation/pc/roms/ibm5150/5700043.u32", 0x0000},
-  {0xfe000, 0xf6000, "/t/projects/emulation/pc/roms/ibm5150/5700051.u33", 0x0000}};
+  {0xfe000, 0xf6000, "../../external/8088/roms/ibm5150/5700019.u29", 0x0000},
+  {0xfe000, 0xf8000, "../../external/8088/roms/ibm5150/5700027.u30", 0x0000},
+  {0xfe000, 0xfa000, "../../external/8088/roms/ibm5150/5700035.u31", 0x0000},
+  {0xfe000, 0xfc000, "../../external/8088/roms/ibm5150/5700043.u32", 0x0000},
+  {0xfe000, 0xfe000, "../../external/8088/roms/ibm5150/5700051.u33", 0x0000}};
 
 stopAtCycle = 1000;
 stopSaveState = "saved.state";
