--- a/8088/8088.vcxproj.filters
+++ b/8088/8088.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClInclude Include="8259.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="..\include\alfe\rational.h" />
+    <ClInclude Include="cga.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
