--- a/8088/8088.vcxproj.filters
+++ b/8088/8088.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="..\include\alfe\rational.h" />
     <ClInclude Include="cga.h" />
+    <ClInclude Include="..\include\alfe\pipes.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
