--- a/8088/ibm5150.config
+++ b/8088/ibm5150.config
@@ -6,6 +6,8 @@ roms = {
   {0xfe000, 0xfc000, "../../external/8088/roms/ibm5150/5700043.u32", 0x0000},
   {0xfe000, 0xfe000, "../../external/8088/roms/ibm5150/5700051.u33", 0x0000}};
 
+cgarom = "../../external/8088/roms/5788005.u33";
+
 stopAtCycle = 1000;
 stopSaveState = "saved.state";
 
