--- a/8088/ibm5160.config
+++ b/8088/ibm5160.config
@@ -1,7 +1,9 @@
 roms = {
   // Mask   Address  Filename                                     File offset
-  {0xfe000, 0xf6000, "/t/projects/emulation/pc/roms/5000027.u19", 0x6000},
-  {0xf8000, 0xf8000, "/t/projects/emulation/pc/roms/1501512.u18", 0x0000}};
+  {0xfe000, 0xf6000, "../../external/8088/roms/ibm5160/5000027.u19", 0x6000},
+  {0xf8000, 0xf8000, "../../external/8088/roms/ibm5160/1501512.u18", 0x0000}};
+
+cgarom = "../../external/8088/roms/5788005.u33";
 
 //stopAtCycle = 271039;
 //stopAtCycle = 1;
