Fix up Alegend45's changes

--- a/8088/ibm5150.config
+++ b/8088/ibm5150.config
@@ -9,4 +9,6 @@ roms = {
 cgarom = "../../external/8088/roms/5788005.u33";
 
 stopAtCycle = 1000;
-//stopSaveState = "saved.state";
+stopSaveState = "saved.state";
+
+//initialState = "saved.state";
