--- a/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
+++ b/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
@@ -50,5 +50,11 @@
     <ClInclude Include="..\..\..\include\alfe\any.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\rdif.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\linked_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
