--- a/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
+++ b/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="..\..\..\include\alfe\linked_list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
