--- a/8088/8088.vcxproj.filters
+++ b/8088/8088.vcxproj.filters
@@ -21,10 +21,14 @@
     <ClInclude Include="..\include\alfe\value.h" />
     <ClInclude Include="8255.h" />
     <ClInclude Include="8259.h" />
-    <ClInclude Include="common.h" />
     <ClInclude Include="..\include\alfe\rational.h" />
     <ClInclude Include="cga.h" />
     <ClInclude Include="..\include\alfe\pipes.h" />
+    <ClInclude Include="dram.h" />
+    <ClInclude Include="mc6845.h" />
+    <ClInclude Include="xt_keyboard_shift_register.h" />
+    <ClInclude Include="xt_keyboard.h" />
+    <ClInclude Include="rgbi_monitor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
