--- a/8088/8088.vcxproj
+++ b/8088/8088.vcxproj
@@ -95,8 +95,8 @@
     </ClInclude>
     <ClInclude Include="dram.h" />
     <ClInclude Include="rgbi_monitor.h" />
-    <ClInclude Include="xt_keyboard.h" />
-    <ClInclude Include="xt_keyboard_shift_register.h" />
+    <ClInclude Include="pcxt_keyboard.h" />
+    <ClInclude Include="pcxt_keyboard_port.h" />
     <ClInclude Include="mc6845.h" />
   </ItemGroup>
   <ItemGroup>
