--- a/8088/8088.vcxproj.filters
+++ b/8088/8088.vcxproj.filters
@@ -26,9 +26,9 @@
     <ClInclude Include="..\include\alfe\pipes.h" />
     <ClInclude Include="dram.h" />
     <ClInclude Include="mc6845.h" />
-    <ClInclude Include="xt_keyboard_shift_register.h" />
-    <ClInclude Include="xt_keyboard.h" />
     <ClInclude Include="rgbi_monitor.h" />
+    <ClInclude Include="pcxt_keyboard.h" />
+    <ClInclude Include="pcxt_keyboard_port.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scratch.txt" />
