New config files

--- a/8088/ibm5150.config
+++ b/8088/ibm5150.config
@@ -1,12 +1,11 @@
-roms = {
-  // Mask   Address  Filename                                             File offset
-  {0xfe000, 0xf6000, "../../external/8088/roms/ibm5150/5700019.u29", 0x0000},
-  {0xfe000, 0xf8000, "../../external/8088/roms/ibm5150/5700027.u30", 0x0000},
-  {0xfe000, 0xfa000, "../../external/8088/roms/ibm5150/5700035.u31", 0x0000},
-  {0xfe000, 0xfc000, "../../external/8088/roms/ibm5150/5700043.u32", 0x0000},
-  {0xfe000, 0xfe000, "../../external/8088/roms/ibm5150/5700051.u33", 0x0000}};
+include "ibmpcxt.config";
 
-cgarom = "../../external/8088/roms/5788005.u33";
+//         Mask     Address  Filename                                        File offset
+ROM u29 = {0xfe000, 0xf6000, "../../external/8088/roms/ibm5150/5700019.u29", 0x0000}; bus.slot = u29.bus;
+ROM u30 = {0xfe000, 0xf8000, "../../external/8088/roms/ibm5150/5700027.u30", 0x0000}; bus.slot = u30.bus;
+ROM u31 = {0xfe000, 0xfa000, "../../external/8088/roms/ibm5150/5700035.u31", 0x0000}; bus.slot = u31.bus;
+ROM u32 = {0xfe000, 0xfc000, "../../external/8088/roms/ibm5150/5700043.u32", 0x0000}; bus.slot = u32.bus;
+ROM u33 = {0xfe000, 0xfe000, "../../external/8088/roms/ibm5150/5700051.u33", 0x0000}; bus.slot = u33.bus;
 
 stopAtCycle = 1000;
 stopSaveState = "saved.state";
