--- a/8088/ibm5160.config
+++ b/8088/ibm5160.config
@@ -1,9 +1,9 @@
-roms = {
-  // Mask   Address  Filename                                     File offset
-  {0xfe000, 0xf6000, "../../external/8088/roms/ibm5160/5000027.u19", 0x6000},
-  {0xf8000, 0xf8000, "../../external/8088/roms/ibm5160/1501512.u18", 0x0000}};
+include "ibmpcxt.config";
 
-cgarom = "../../external/8088/roms/5788005.u33";
+//         Mask     Address  Filename                                        File offset
+ROM u18 = {0xfe000, 0xf6000, "../../external/8088/roms/ibm5160/5000027.u19", 0x6000}; bus.slot = u18.bus;
+ROM u19 = {0xf8000, 0xf8000, "../../external/8088/roms/ibm5160/1501512.u18", 0x0000}; bus.slot = u19.bus;
+
 
 //stopAtCycle = 271039;
 //stopAtCycle = 1;
