--- a/8088/ibmpcxt.config
+++ b/8088/ibmpcxt.config
@@ -10,7 +10,7 @@ RAM ram;
 ram.rowBits = 9;
 ram.bytes = 0xa0000;
 ram.decayTime = (4*ms / 256) << ram.rowBits;
-bus.ram = ram.bus;
+bus.slot = ram.bus;
 
 NMISwitch nmiSwitch;               bus.slot = nmiSwitch.bus;
 DMAPageRegisters dmaPageRegisters; bus.slot = dmaPageRegisters.bus;
