--- a/8088/8088.vcxproj
+++ b/8088/8088.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -14,20 +14,21 @@
     <ProjectGuid>{E826CBD1-D42C-4CDF-B8D7-7A71C1267ED9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My8088</RootNamespace>
+    <ProjectName>berapa</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -86,20 +87,28 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="8088.cpp" />
+    <ClCompile Include="berapa.cpp" />
+    <ClInclude Include="..\include\alfe\assert.h" />
+    <ClInclude Include="..\include\alfe\handle.h" />
     <ClInclude Include="..\include\alfe\kind.h" />
     <ClInclude Include="..\include\alfe\nullary.h" />
     <ClInclude Include="..\include\alfe\pipes.h" />
     <ClInclude Include="..\include\alfe\rational.h" />
+    <ClInclude Include="8088.h" />
     <ClInclude Include="8237.h" />
     <ClInclude Include="8253.h">
       <FileType>CppHeader</FileType>
     </ClInclude>
+    <ClInclude Include="dma_page_registers.h" />
     <ClInclude Include="dram.h" />
+    <ClInclude Include="isa_8_bit_bus.h" />
+    <ClInclude Include="nmi_switch.h" />
+    <ClInclude Include="ram.h" />
     <ClInclude Include="rgbi_monitor.h" />
     <ClInclude Include="pcxt_keyboard.h" />
     <ClInclude Include="pcxt_keyboard_port.h" />
     <ClInclude Include="mc6845.h" />
+    <ClInclude Include="rom.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\alfe\array.h" />
