--- a/berapa/berapa.vcxproj
+++ b/berapa/berapa.vcxproj
@@ -89,11 +89,17 @@
   <ItemGroup>
     <ClCompile Include="berapa.cpp" />
     <ClInclude Include="..\include\alfe\assert.h" />
+    <ClInclude Include="..\include\alfe\expression.h" />
+    <ClInclude Include="..\include\alfe\function.h" />
     <ClInclude Include="..\include\alfe\handle.h" />
+    <ClInclude Include="..\include\alfe\identifier.h" />
     <ClInclude Include="..\include\alfe\kind.h" />
     <ClInclude Include="..\include\alfe\nullary.h" />
+    <ClInclude Include="..\include\alfe\operator.h" />
+    <ClInclude Include="..\include\alfe\parse_tree_object.h" />
     <ClInclude Include="..\include\alfe\pipes.h" />
     <ClInclude Include="..\include\alfe\rational.h" />
+    <ClInclude Include="..\include\alfe\type_specifier.h" />
     <ClInclude Include="8088.h" />
     <ClInclude Include="8237.h" />
     <ClInclude Include="8253.h">
